2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/openvas_certificate_file.c: Commented another show_error,
	added todo regarding re-enabling of error-reporting.

2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/openvas_certificates.c, base/openvas_certificates.h: Renamed
	to openvas_certificate (stripped trailing s).

	* base/openvas_certificates.c, base/openvas_certificates.h
	(openvas_certificate_file_write): Changed signature and implementation,
	get GHashTable directly instead of a context containing it.

	* base/openvas_certificates.c, base/openvas_certificates.h,
	base/openvas_certificate_file.c, base/openvas_certificate_file.h,
	base/severity_filter.c: Updated includes,
	added workaround and todos regarding i18n.

	* MANIFEST: Updated content.

	* base/CMakeLists.txt: Updated.

	* Makefile: Install new headers.

2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved the openvas_certificate_file module from
	openvas-client/src/openvas-lib/.

	* base/openvas_certificate_file.c, base/openvas_certificate_file.h:
	Moved from openvas-client/src/openvas-lib/.

2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved the openvas_certificates module from
	openvas-client/src/openvas-lib/.

	* base/openvas_certificates.c, base/openvas_certificates.h: Moved from
	openvas-client/src/openvas-lib/.

2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved the severity_filter module from openvas-client/src/util.

	* src/util/severity_filter.c, src/util/severity_filter.h: Moved from
	openvas-client/src/util.

2009-09-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_misc_funcs.c, nasl/nasl_init.c,
	misc/services.h, misc/services.c, misc/services1.c,
	misc/scanners_utils.h, misc/resolve.h, misc/plugutils.h,
	misc/plugutils.c, misc/network.c, misc/ids_send.h,
	misc/ids_send.c: Renamed NESSUS to OPENVAS.
