@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: openvas-libraries
+Description: OpenVAS libraries
+Version: @version@
+Requires: glib-2.0 = 2.8.0
+Cflags: -I${includedir}
+Libs: -L${libdir} -lglib
