@@ -1,3 +1,7 @@
+2009-09-21  Vlatko Kosturjak <kost@linux.hr>
+
+	* libopenvas.pc.in: new file, support for pkg-config
+
 2009-09-21  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	* base/openvas_certificate_file.c: Commented another show_error,
